--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -31,10 +33,12 @@
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/fs-extra": "^8.0.0",
     "@types/koa": "^2.0.49",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
-    "@types/luxon": "^1.15.2"
+    "@types/luxon": "^1.15.2",
+    "nodemon": "^1.19.2"
   }
 }
