--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "luxon": "^1.17.3"
+    "koa-views": "^6.2.1",
+    "luxon": "^1.17.3",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
